unpackaged/post/08_redu_object_tracking/objects/rio_ed__Study_Offering__c.object
<CustomObject>
    <fields>
        <fullName>rio_ed__Booked_Places__c</fullName>
        <label>Booked Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>rio_ed__Listing_Status__c</fullName>
        <description>To specify the listing status of the Study Offering e.g. Draft, Approved.</description>
        <inlineHelpText>To specify the listing status of the Study Offering e.g. Draft, Approved.</inlineHelpText>
        <label>Listing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>rio_ed__Waitlisted_Places__c</fullName>
        <description>Number of currently waitlisted students.</description>
        <inlineHelpText>Number of currently waitlisted students.</inlineHelpText>
        <label>Waitlisted Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Study Offering</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>